# demos-build-cmake

./: .gitignore  Makefile  README.md  exercise.txt  packages.txt  slides.txt
bad_variable_name/: README.txt
binary/: CMakeLists.txt  build.sh  hello.cc
config/: deps.py  project.py
doc/: TODO.txt
empty/: README.txt
examples/: .gitignore  CMakeLists.txt
examples/06_large_project/: CMakeLists.txt
examples/06_large_project/mylib/: CMakeLists.txt
examples/bad_variable_name/: CMakeLists.txt  README.md
examples/bin_and_lib/: CMakeLists.txt
examples/bin_and_lib/mybin/: CMakeCache.txt  Makefile  cmake_install.cmake  mybin  mybin.cc
examples/bin_and_lib/mylib/: CMakeLists.txt  Makefile  cmake_install.cmake  mylib.hh
examples/binary/: CMakeLists.txt  README.md
examples/different_source_and_build_folders/: CMakeLists.txt  README.md
examples/empty/: CMakeLists.txt
examples/extra_includes/: CMakeLists.txt  README.md  build.sh  hello.cc
examples/find_sources/: CMakeLists.txt  main.cc
examples/large_project/: CMakeLists.txt
examples/large_project/mybin/: CMakeLists.txt
examples/large_project/mylib/: CMakeLists.txt
examples/liba_depends_on_libb/: CMakeLists.txt  README.md  a.cc  b.cc  build.sh
examples/link_pkg_config/: CMakeLists.txt  README.md  hellogtk.cc
examples/link_with_external_library/: CMakeLists.txt  helloz.cc
examples/message/: CMakeLists.txt  README.md
examples/private_linking/: CMakeLists.txt  README.md
examples/release_vs_debug/: CMakeLists.txt  README.md  build.sh
examples/simple/: CMakeLists.txt  README.md
examples/simple/hello/: CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.cc
examples/verbose/: CMakeLists.txt  README.md  clean.sh
examples/wrong_order/: CMakeLists.txt  README.md
examples/wrong_order/mybin/: CMakeLists.txt
examples/wrong_order/mylib/: CMakeLists.txt
exercise/: README.md
exercises/00_multi_folder/: README.md
exercises/hello_world/: README.md
find_sources/: CMakeLists.txt
include/: all_include.cmake
large_project/: CMakeLists.txt
large_project/mybin/: CMakeLists.txt
large_project/mylib/: CMakeLists.txt  mylib.cc  mylib.hh
message/: CMakeLists.txt
ordered_examples/: 00  01  02  03  04  05  06  07  08
ordered_exercises/: 00  01
scripts/: build.sh  build_all.sh  clean_all.sh
wrong_order/: CMakeLists.txt
wrong_order/mybin/: CMakeLists.txt  mybin.cc
wrong_order/mylib/: CMakeLists.txt
